--- a/templates/detalhes_os.html
+++ b/templates/detalhes_os.html
@@ -51,6 +51,8 @@
 
         <button class="btn btn-sm btn-primary" type="submit">Salvar OS</button>
         <a class="btn btn-sm btn-primary" href="{{url_for('deletar_os', id=ordem_servico.id)}}">Excluir</a>
+        <a class="btn btn-sm btn-primary" href="{{url_for('gerar_pdf_os', os_id=ordem_servico.id)}}">PDF</a>
+        <a class="btn btn-sm btn-primary" href="{{url_for('exibir_pdf_os', os_id=ordem_servico.id)}}">exibir PDF</a>
     </form>
 </div>
 <div class="card mt-3">
