--- a/templates/ver_os_cliente.html
+++ b/templates/ver_os_cliente.html
@@ -116,7 +116,7 @@
         </div>
     </div>
     <script>
-        status = document.querySelector("#status") 
+        const status = document.querySelector("#status") 
             if (status.textContent == "Concluído"){
                 status.classList.add('bg-success'); // Adds the green background
                 status.classList.add('text-white'); // Makes the text white for better contrast
