ativado botão em pequenas telas

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,13 +31,20 @@
 </head>
 <body>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg shadow-sm mb-4">
+   <nav class="navbar navbar-expand-lg shadow-sm mb-4 border-bottom">
     <div class="container">
       <a class="navbar-brand fw-bold" href="{{ url_for('home') }}">
         <i class="bi bi-gear-fill me-2"></i>Oficina do Micro
       </a>
-      <div class="collapse navbar-collapse">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarPublica" aria-controls="navbarPublica" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarPublica">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('index') }}">Início</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('listar_clientes') }}">
               <i class="bi bi-people me-1"></i>Clientes
@@ -49,20 +56,17 @@
             </a>
           </li>
         </ul>
-        <div class="d-flex align-items-center gap-3">
-          <button id="themeToggle" class="theme-toggle" title="Alternar tema">🌙</button>
-          {% if current_user.is_authenticated %}
-          <a class="btn btn-outline-danger btn-sm" href="{{ url_for('logout') }}">
-            <i class="bi bi-box-arrow-right"></i> Sair
-          </a>
-          {% endif %}
-        </div>
+        <button id="themeToggle" class="theme-toggle ms-3" title="Alternar tema">
+          <i id="themeIcon" class="bi bi-moon"></i>
+        </button>
+        
       </div>
     </div>
   </nav>
+  
 
   <!-- Conteúdo -->
-  <main class="container mb-4">
+  <main class="container">
     {% block content %}{% endblock %}
   </main>
 
