--- a/templates/base_publica.html
+++ b/templates/base_publica.html
@@ -56,7 +56,9 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg shadow-sm mb-4 border-bottom">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="{{ url_for('index') }}">Oficina do Micro</a>
+      <a class="navbar-brand fw-bold" href="{{ url_for('index') }}">
+        <i class="bi bi-gear-fill me-2"></i>Oficina do Micro
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarPublica" aria-controls="navbarPublica" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
